fix background image not displaying on iOS

--- a/styles.css
+++ b/styles.css
@@ -187,7 +187,7 @@ hl {
 /* Home Page */
 
 .hero-image {
-    background-image: url("/boomrock-view-2.avif");
+    background-image: url("/boomrock-view-2.avif"), url("/boomrock-view-2.jpeg");
     height: 220px;
     width: 100%;
     background-position: center;
